basic navbar created

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio A1</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="start">Hello World</h1>
+    <nav id="nav">
+        <a href="#"><img src="./Assets/LOGO.png" alt=""></a>
+        <div>
+            <a href="#" class="navBtn">Home</a>
+            <a href="#" class="navBtn">About</a>
+            <a href="#" class="navBtn">Projects</a>
+            <a href="#" class="navBtn">Teastimonials</a>
+            <button id="cvBtn">Download CV</button>
+        </div>
+    </nav>
 </body>
 </html>
