--- a/index.html
+++ b/index.html
@@ -8,15 +8,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Navbar starts -->
     <nav id="nav">
         <a href="#"><img src="./Assets/LOGO.png" alt=""></a>
         <div>
-            <a href="#" class="navBtn">Home</a>
-            <a href="#" class="navBtn">About</a>
-            <a href="#" class="navBtn">Projects</a>
-            <a href="#" class="navBtn">Teastimonials</a>
+            <a href="#" class="aBtn">Home</a>
+            <a href="#" class="aBtn">About</a>
+            <a href="#" class="aBtn">Projects</a>
+            <a href="#" class="aBtn">Teastimonials</a>
             <button id="cvBtn">Download CV</button>
         </div>
     </nav>
+    <!-- Navbar End -->
+    <!-- Footer Starts -->
+    <footer>
+        <img src="./Assets/LOGO.png" style="background-color: black;" alt="">
+        <div id="footerBtns">
+            <a href="#" class="aBtn">Home</a>
+            <a href="#" class="aBtn">About Me</a>
+            <a href="#" class="aBtn">Services</a>
+            <a href="#" class="aBtn">Projects</a>
+            <a href="#" class="aBtn">Teastimonials</a>
+            <a href="#" class="aBtn">Contact</a>
+        </div>
+        <div id="socialIcons">
+            <img src="./Assets/Facebook - Negative.png" alt="">
+            <img src="./Assets/Twitter - Negative.png" alt="">
+            <img src="./Assets/Instagram - Negative.png" alt="">
+            <img src="./Assets/LinkedIn - Negative.png" alt="">
+        </div>
+        <div id="copyRights" >
+            <p style="color: #FFFFFF;">© 2023 <span style="color: #FD6F00;">Kamrul Islam Rahim</span> All Rights Reserved , Inc.</p>
+        </div>
+    </footer>
+    <!-- Footer End -->
 </body>
 </html>
