award section added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Navbar starts -->
-    <nav id="nav">
+    <nav id="nav" class="container">
         <a href="#"><img src="./Assets/LOGO.png" alt=""></a>
         <div>
             <a href="#" class="aBtn">Home</a>
@@ -20,6 +20,30 @@
         </div>
     </nav>
     <!-- Navbar End -->
+    <!-- Award Section Starts -->
+    <section id="awardSection" class="container">
+            <p style="font-size: 40px; font-weight: 800;">Awards</p>
+            <p class="secSub">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
+            <div class="container">
+                <!-- Award 1 -->
+                <div class="award-card">
+                    <div class="award-top">
+                        <p class="award-heading">Best Mobile App Design (2023)</p>
+                        <p class="award-title">Product Design 2023</p>
+                    </div>
+                    <p class="award-desc">Awarded by [Name of Awarding Body] for my design of the "Fitness+ App". The app's intuitive interface and user-friendly features were praised for promoting a healthy lifestyle.</p>
+                </div>
+                <!-- Award 2 -->
+                <div class="award-card">
+                    <div class="award-top">
+                        <p class="award-heading">UI/UX Design Competition (2022)</p>
+                        <p class="award-title">Product Design 2022</p>
+                    </div>
+                    <p class="award-desc">My design concept for a sustainable e-commerce platform was selected as a finalist in the [Name of Competition]. The judges commended the design's focus on user experience and eco-friendly features.</p>
+                </div>
+            </div>
+    </section>
+    <!-- Award Section End -->
     <!-- Footer Starts -->
     <footer>
         <img src="./Assets/LOGO.png" style="background-color: black;" alt="">
@@ -38,7 +62,7 @@
             <img src="./Assets/LinkedIn - Negative.png" alt="">
         </div>
         <div id="copyRights" >
-            <p style="color: #FFFFFF;">© 2023 <span style="color: #FD6F00;">Kamrul Islam Rahim</span> All Rights Reserved , Inc.</p>
+            <p>© 2023 <span style="color: #FD6F00;">Kamrul Islam Rahim</span> All Rights Reserved , Inc.</p>
         </div>
     </footer>
     <!-- Footer End -->
