portfolio section added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,46 @@
             </div>
     </section>
     <!-- Award Section End -->
+    <!-- Portfolio Section Starts -->
+    <section id="portfolioSection">
+        <p style="font-size: 40px; font-weight: 800;">My Portfolio</p>
+        <p class="secSub">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
+        <div id="portfolio-tabs">
+            <p class="tab">UI/UX</p>
+            <p class="tab" style="background-color: #FD6F00;">Web Design</p>
+            <p class="tab">App Design</p>
+            <p class="tab">Graphic Design</p>
+        </div>
+        <!-- project 1 -->
+        <div class="project-card">
+            <div class="project-img">
+                <img src="./Assets/project1.png" class="img1" alt="">
+                <img src="./Assets/project2.png" class="img2" alt="">
+            </div>
+            <div>
+                <p style="font-size: 18px; font-weight: 600; margin-bottom: 5px;">UX case study</p>
+                <p style="font-size: 40px; font-weight: 700; margin-bottom: 10px;">Bally Website Research</p>
+                <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+                <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+                <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+            </div>
+        </div>
+         <!-- project 2 -->
+         <div class="project-card" style="flex-direction: row-reverse;">
+            <div class="project-img">
+                <img src="./Assets/project1.png" class="img1" alt="">
+                <img src="./Assets/project2.png" class="img2" alt="">
+            </div>
+            <div>
+                <p style="font-size: 18px; font-weight: 600; margin-bottom: 5px;">UX case study</p>
+                <p style="font-size: 40px; font-weight: 700; margin-bottom: 10px;">Bally Website Research</p>
+                <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+                <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+                <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio Section End -->
     <!-- Footer Starts -->
     <footer>
         <img src="./Assets/LOGO.png" style="background-color: black;" alt="">
