contact section added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,29 @@
         </div>
     </section>
     <!-- Portfolio Section End -->
+    <!-- Contact Section starts -->
+    <section class="container">
+        <div id="contact-heading">
+            <p style="font-size: 18px; font-weight: 600; margin-bottom: 10px;">Contact</p>
+            <p style="font-size: 40px; font-weight: 700; margin-bottom: 40px;">Reach out me</p>
+        </div>
+        <div id="contact-section">
+            <p style="font-size: 40px; font-weight: 700; margin-bottom: 40px;">ANY PROJECT?</p>
+            <div>
+                <div class="two-col">
+                    <p style="border-bottom: 1px solid white; padding-bottom: 20px; ">NAME</p>
+                    <p style="border-bottom: 1px solid white; padding-bottom: 20px;">EMAIL</p>
+                </div>
+                <p style="border-bottom: 1px solid white; padding-bottom: 60px; margin-bottom: 25px;">MESSAGE</p>
+                <div style="display: flex; gap: 5px;">
+                    <img src="./Assets/hook.png" alt="">
+                    <p style="font-weight: 500;">ATTACH FILE</p>
+                </div>
+                <p id="submit-btn">Submit now</p>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Section ends -->
     <!-- Footer Starts -->
     <footer>
         <img src="./Assets/LOGO.png" style="background-color: black;" alt="">
