exprience section added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,42 @@
         </div>
     </nav>
     <!-- Navbar End -->
+    <!-- Exprience Section Start -->
+    <section style="background-image: linear-gradient(to left,rgba(255, 177, 71, 0.1), rgba(255, 108, 99, 0.1), rgba(184, 106, 223, 0.1)); padding: 120px 10px; margin-bottom: 120px;";>
+       <div class="container" style="display: flex; justify-content: space-between; align-items: center; gap: 70px;">
+         <!-- left side -->
+         <div style="max-width: 50%;">
+            <p style="font-size: 18px; font-weight: 600; font-style: italic; margin-bottom: 15px;">Experience</p>
+            <p style="font-size: 40px; font-weight: 700; margin-bottom: 30px;">MY EXPRIENCE</p>
+            <p style="font-size: 18px; line-height: 28px; max-width: 90%;">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
+        </div>
+        <!-- right side -->
+        <div style="width: 50%;">
+            <div style="margin-bottom:40px;">
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+                    <p style="font-size: 18px; font-weight: 700; font-style: italic;">-2018 - Present</p>
+                    <p>-Rolling Thunder</p>
+                </div>
+                <p style="font-size: 32px; font-weight: 700; border-bottom: 1px solid gray; padding-bottom: 30px;">Lead UI/UX Designer</p>
+            </div>
+            <div style="margin-bottom:40px;">
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+                    <p style="font-size: 18px; font-weight: 700; font-style: italic;">-2018 - 2010</p>
+                    <p>-Locost Accessories</p>
+                </div>
+                <p style="font-size: 32px; font-weight: 700; border-bottom: 1px solid gray; padding-bottom: 30px;">Senior UI/UX Designer</p>
+            </div>
+            <div>
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+                    <p style="font-size: 18px; font-weight: 700; font-style: italic;">-2008 - 2006</p>
+                    <p>-Sagebrush</p>
+                </div>
+                <p style="font-size: 32px; font-weight: 700; border-bottom: 1px solid gray; padding-bottom: 30px;">Junior UI/UX Designer</p>
+            </div>
+        </div>
+       </div>
+    </section>
+    <!-- Exprience Section End -->
     <!-- Award Section Starts -->
     <section id="awardSection" class="container">
             <p style="font-size: 40px; font-weight: 800;">Awards</p>
@@ -45,7 +81,7 @@
     </section>
     <!-- Award Section End -->
     <!-- Portfolio Section Starts -->
-    <section id="portfolioSection">
+    <section id="portfolioSection" class="container">
         <p style="font-size: 40px; font-weight: 800;">My Portfolio</p>
         <p class="secSub">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
         <div id="portfolio-tabs">
