about section added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,30 @@
         </div>
     </nav>
     <!-- Navbar End -->
+    <!-- About Me Section Starts -->
+    <section class="container" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 60px;">
+        <!-- left side -->
+        <div>
+            <p style="font-size: 40px; font-weight: 800;">ABOUT ME</p>
+            <p style="font-size: 18px; line-height: 21.33px; color: 
+            rgba(255, 255, 255, 0.5); max-width: 500px;">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
+        </div>
+        <!-- right side -->
+        <div style="display: flex; flex-direction: column; align-items: end;">
+            <div style="display: flex; align-items: center;">
+                <img src="./Assets/Star.png" alt="">
+                <img src="./Assets/Star.png" alt="">
+                <img src="./Assets/Star.png" alt="">
+                <img src="./Assets/Star.png" alt="">
+                <img src="./Assets/Star.png" alt="">
+            </div>
+            <p style="font-size: 47px; font-weight: 700;">10 Years</p>
+            <p style="font-size: 20px;">Experince</p>
+        </div>
+    </section>
+    <!-- About Me Section Ends -->
     <!-- Exprience Section Start -->
-    <section style="background-image: linear-gradient(to left,rgba(255, 177, 71, 0.1), rgba(255, 108, 99, 0.1), rgba(184, 106, 223, 0.1)); padding: 120px 10px; margin-bottom: 120px;";>
+    <section style="background-image: linear-gradient(to left,rgba(255, 177, 71, 0.1), rgba(255, 108, 99, 0.1), rgba(184, 106, 223, 0.1)); padding: 120px 10px; margin-bottom: 120px;">
        <div class="container" style="display: flex; justify-content: space-between; align-items: center; gap: 70px;">
          <!-- left side -->
          <div style="max-width: 50%;">
