--- a/index.html
+++ b/index.html
@@ -20,8 +20,56 @@
         </div>
     </nav>
     <!-- Navbar End -->
+
+    <!-- Banner Section Starts -->
+    <section id="banner-container" class="container">
+        <!-- left side -->
+        <div>
+            <div style="font-size: 40px; font-weight: 800; line-height: 55px;">
+                <p>HI,I’M RAHIM</p>
+                <p>A CREATIVE <span><img src="./Assets/StarX.png" alt=""></span> DESIGNER</p>
+                <p>BASED IN <span style="color: #FD6F00;">DHAKA</span></p>
+            </div>
+            <p style="font-size: 18px; color: rgba(255, 255, 255, 0.5); max-width: 500px;">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
+            <!-- services -->
+            <div style="display: flex; align-items: center; gap: 10px; font-size: 24px; font-weight: 300; color: rgba(255, 255, 255, 1); margin-top: 20px; margin-bottom: 40px;">
+                <p>DESIGN</p>
+                <img src="./Assets/StarX.png" alt="">
+                <p>DEVELOPMENT</p>
+                <img src="./Assets/StarX.png" alt="">
+                <p>WEVFLOW</p>
+            </div>
+            <!-- portfolio button -->
+            <div style="display: flex; align-items: center; justify-content: space-between; max-width: 400px; background-color: rgba(255, 255, 255, 0.1); border: 2px solid gray; border-radius: 40px; padding: 10px;">
+                <div style="display: flex; align-items: center; justify-content: center; background-color: #FD6F00; width: 240px; padding: 5px; border-radius: 25px;">
+                    <p style="font-size: 25px;">Portfolio</p>
+                    <img src="./Assets/arrow.png" alt="">
+                </div>
+                <p style="font-size: 25px; margin-right: 20px;">Hire me</p>
+            </div>
+            <!-- social icons -->
+            <div class="socialIcons" style="margin-top: 30px;">
+                <img src="./Assets/Vector.png" alt="">
+                <img src="./Assets/Vector (1).png" alt="">
+                <img src="./Assets/Vector (2).png" alt="">
+                <img src="./Assets/Instagram - Negative.png" alt="">
+            </div>
+        </div>
+        <!-- right side -->
+        <div style="position: relative;">
+            <div id="img-bg"></div>
+           <div style="position: absolute; top: -130px; left: -15px;">
+            <div style="display: flex; flex-direction: column; position: relative; max-width: fit-content;">
+                <img src="./Assets/Layer 0 copy 4.png" alt="">
+                <img style="position: absolute; top: 130px; left: 15px;" src="./Assets/Mask group.png" alt="">
+            </div>
+           </div>
+        </div>
+    </section>
+    <!-- Banner Section Ends -->
+
     <!-- About Me Section Starts -->
-    <section class="container" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 60px;">
+    <section class="container" style="display: flex; justify-content: space-between; align-items: center; margin-top: 100px; margin-bottom: 60px;">
         <!-- left side -->
         <div>
             <p style="font-size: 40px; font-weight: 800;">ABOUT ME</p>
@@ -42,6 +90,7 @@
         </div>
     </section>
     <!-- About Me Section Ends -->
+
     <!-- Exprience Section Start -->
     <section style="background-image: linear-gradient(to left,rgba(255, 177, 71, 0.1), rgba(255, 108, 99, 0.1), rgba(184, 106, 223, 0.1)); padding: 120px 10px; margin-bottom: 120px;">
        <div class="container" style="display: flex; justify-content: space-between; align-items: center; gap: 70px;">
@@ -78,6 +127,7 @@
        </div>
     </section>
     <!-- Exprience Section End -->
+
     <!-- Award Section Starts -->
     <section id="awardSection" class="container">
             <p style="font-size: 40px; font-weight: 800;">Awards</p>
@@ -102,6 +152,7 @@
             </div>
     </section>
     <!-- Award Section End -->
+
     <!-- Portfolio Section Starts -->
     <section id="portfolioSection" class="container">
         <p style="font-size: 40px; font-weight: 800;">My Portfolio</p>
@@ -142,6 +193,7 @@
         </div>
     </section>
     <!-- Portfolio Section End -->
+
     <!-- Contact Section starts -->
     <section class="container">
         <div id="contact-heading">
@@ -165,6 +217,7 @@
         </div>
     </section>
     <!-- Contact Section ends -->
+
     <!-- Footer Starts -->
     <footer>
         <img src="./Assets/LOGO.png" style="background-color: black;" alt="">
@@ -176,7 +229,7 @@
             <a href="#" class="aBtn">Teastimonials</a>
             <a href="#" class="aBtn">Contact</a>
         </div>
-        <div id="socialIcons">
+        <div class="socialIcons">
             <img src="./Assets/Facebook - Negative.png" alt="">
             <img src="./Assets/Twitter - Negative.png" alt="">
             <img src="./Assets/Instagram - Negative.png" alt="">
