exprience section responsive done

--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
     <!-- About Me Section Ends -->
 
     <!-- Exprience Section Start -->
-    <section style="background-image: linear-gradient(to left,rgba(255, 177, 71, 0.1), rgba(255, 108, 99, 0.1), rgba(184, 106, 223, 0.1)); padding: 120px 10px; margin-bottom: 120px;">
-       <div class="container" style="display: flex; justify-content: space-between; align-items: center; gap: 70px;">
+    <section id="exprience-section">
+       <div id="exprience-container" class="container">
          <!-- left side -->
-         <div style="max-width: 50%;">
+         <div class="exprience-left-right">
             <p style="font-size: 18px; font-weight: 600; font-style: italic; margin-bottom: 15px;">Experience</p>
             <p style="font-size: 40px; font-weight: 700; margin-bottom: 30px;">MY EXPRIENCE</p>
             <p style="font-size: 18px; line-height: 28px; max-width: 90%;">I'm a passionate Creative Designer with a knack for crafting visually compelling and impactful designs.  I bring my creative vision to life across various mediums, helping brands and businesses communicate effectively and leave a lasting impression.</p>
         </div>
         <!-- right side -->
-        <div style="width: 50%;">
+        <div class="exprience-left-right">
             <div style="margin-bottom:40px;">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                     <p style="font-size: 18px; font-weight: 700; font-style: italic;">-2018 - Present</p>
