about section responsive done

--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
     <!-- Banner Section Ends -->
 
     <!-- About Me Section Starts -->
-    <section class="container" style="display: flex; justify-content: space-between; align-items: center; margin-top: 100px; margin-bottom: 60px;">
+    <section id="about-container" class="container">
         <!-- left side -->
         <div>
-            <p style="font-size: 40px; font-weight: 800;">ABOUT ME</p>
-            <p style="font-size: 18px; line-height: 21.33px; color: 
-            rgba(255, 255, 255, 0.5); max-width: 500px;">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
+            <p id="about-title" style="font-size: 40px; font-weight: 800;">ABOUT ME</p>
+            <p id="about-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
         </div>
         <!-- right side -->
         <div style="display: flex; flex-direction: column; align-items: end;">
@@ -85,8 +84,10 @@
                 <img src="./Assets/Star.png" alt="">
                 <img src="./Assets/Star.png" alt="">
             </div>
+            <div id="exp-date">
             <p style="font-size: 47px; font-weight: 700;">10 Years</p>
             <p style="font-size: 20px;">Experince</p>
+            </div>
         </div>
     </section>
     <!-- About Me Section Ends -->
