banner section responsive done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <p style="font-size: 18px; color: rgba(255, 255, 255, 0.5); max-width: 500px;">Lorem ipsum dolor sit amet consectetur. Tristique amet sed massa nibh lectus netus in.</p>
             <!-- services -->
-            <div style="display: flex; align-items: center; gap: 10px; font-size: 24px; font-weight: 300; color: rgba(255, 255, 255, 1); margin-top: 20px; margin-bottom: 40px;">
+            <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 10px; font-size: 24px; font-weight: 300; color: rgba(255, 255, 255, 1); margin-top: 20px; margin-bottom: 40px;">
                 <p>DESIGN</p>
                 <img src="./Assets/StarX.png" alt="">
                 <p>DEVELOPMENT</p>
@@ -58,10 +58,10 @@
         <!-- right side -->
         <div style="position: relative;">
             <div id="img-bg"></div>
-           <div style="position: absolute; top: -130px; left: -15px;">
-            <div style="display: flex; flex-direction: column; position: relative; max-width: fit-content;">
-                <img src="./Assets/Layer 0 copy 4.png" alt="">
-                <img style="position: absolute; top: 130px; left: 15px;" src="./Assets/Mask group.png" alt="">
+           <div id="img-container">
+            <div id="images">
+                <img id="img1" src="./Assets/Layer 0 copy 4.png" alt="">
+                <img id="img2" style="" src="./Assets/Mask group.png" alt="">
             </div>
            </div>
         </div>
