portfolio section responsive done

--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
             </div>
         </div>
          <!-- project 2 -->
-         <div class="project-card" style="flex-direction: row-reverse;">
-            <div class="project-img">
-                <img src="./Assets/project1.png" class="img1" alt="">
-                <img src="./Assets/project2.png" class="img2" alt="">
-            </div>
+         <div class="project-card">
             <div>
                 <p style="font-size: 18px; font-weight: 600; margin-bottom: 5px;">UX case study</p>
                 <p style="font-size: 40px; font-weight: 700; margin-bottom: 10px;">Bally Website Research</p>
                 <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
                 <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
                 <p class="project-desc">Lorem ipsum dolor sit amet consectetur. Tristique amet <br> sed massa nibh lectus netus in.</p>
+            </div>
+            <div class="project-img">
+                <img src="./Assets/project1.png" class="img1" alt="">
+                <img src="./Assets/project2.png" class="img2" alt="">
             </div>
         </div>
     </section>
