navbar section responsive done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navbar starts -->
     <nav id="nav" class="container">
         <a href="#"><img src="./Assets/LOGO.png" alt=""></a>
-        <div>
+        <div id="nav-links">
             <a href="#" class="aBtn">Home</a>
             <a href="#" class="aBtn">About</a>
             <a href="#" class="aBtn">Projects</a>
